...
    
    var allEvents: [Event] = []
    var events: [Event] = []
    
    override func viewDidLoad() {
        super.viewDidLoad()
        tableView.accessibilityIdentifier = "SearchEventsTableViewController"
        tableView.showsVerticalScrollIndicator = false
        tableView.separatorStyle = .none
        tableView.backgroundColor = .primaryBackground
        navigationItem.searchController = SearchController(delegate: self)
        
        SeatGeekAPIManager.queryEvents { events in
...
