...
    private let favoriteButtonSize: CGFloat = 50
    
    var favoriteButton: FavoriteButton!
    
    override func viewDidLoad() {
        super.viewDidLoad()
        view.accessibilityIdentifier = "EventDetailViewController"
        view.backgroundColor = .primaryBackground
        edgesForExtendedLayout = []
        
        guard let event = event else {
            self.dismiss(animated: false)
            return
...
